--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,8 @@ body {
   line-height: 1.5;
   font-size: 16px;
   font-family: "Poppins" sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 * {
@@ -29,16 +31,17 @@ body {
 ul {
   list-style: none;
 }
+
 .section {
-  background: var(--bg-black-900);
+  background-image: url(../img/woow.png);
   min-height: 100vh;
   display: block;
-  position: fixed;
-  left: 270px;
   padding: 0 30px;
-  top: 0;
-  right: 0;
   opacity: 1;
+}
+
+.main-content {
+  padding-left: 270px;
 }
 .padd-15 {
   padding-left: 15px;
@@ -49,6 +52,41 @@ ul {
   width: 100%;
   margin: auto;
 }
+.section .container {
+  padding-top: 60px;
+  padding-bottom: 70px;
+}
+.section-title {
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 15px;
+  margin-bottom: 60px;
+}
+.section-title h2 {
+  font-size: 40px;
+  color: var(--text-black-900);
+  font-weight: 700;
+  position: relative;
+}
+.section-title h2::before {
+  content: "";
+  height: 4px;
+  width: 50px;
+  background-color: #c31a6e;
+  position: absolute;
+  top: 100%;
+  left: 0;
+}
+.section-title h2::after {
+  content: "";
+  height: 4px;
+  width: 25px;
+  background-color: #c31a6e;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin-top: 8px;
+}
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -57,9 +95,10 @@ ul {
   position: relative;
 }
 .btn {
-  font-size: 15px;
+  font-size: 18px;
+  font-family: "Poppins";
   font-weight: 500;
-  padding: 12px 35px;
+  padding: 12px 30px;
   color: #e8dfec;
   border-radius: 40px;
   display: inline-block;
@@ -80,7 +119,7 @@ ul {
   top: 0;
   padding: 30px;
   height: 100%;
-  border-right: 1px solid var(--bg-black-50);
+  border-right: 1px solid var(--bg-black-100);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,15 +135,17 @@ ul {
 .aside .logo a {
   color: var(--text-black-900);
   font-weight: 700;
-  background: white;
+  background: var(--bg-black-100);
   padding: 15px 20px;
   font-size: 30px;
   letter-spacing: 5px;
   position: relative;
+  color: #c31a6e;
 }
 .aside .logo a span {
   font-family: "Clicker Script", cursive;
-  font-family: 40px;
+  font-size: 40px;
+  color: #302e4d;
 }
 
 .aside .logo a::before {
@@ -183,7 +224,7 @@ ul {
 }
 
 .aside .nav li a.active {
-  color: red;
+  color: #c31a6e;
 }
 .aside .nav li a i {
   margin-right: 15px;
@@ -198,14 +239,15 @@ ul {
   flex: 0 0 60%;
   max-width: 60%;
   padding: 10px;
+  padding-top: 50px;
 }
 h3.hello {
-  font-size: 28px;
+  font-size: 40px;
   margin: 15px 0;
 }
 h3.hello span {
   font-family: "Clicker Script", cursive;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 700;
   color: #c31a6e;
 }
@@ -217,7 +259,7 @@ h3.my-course {
   color: #c31a6e;
 }
 .home-info p {
-  margin-bottom: 70px;
+  margin-bottom: 40px;
   font-size: 20px;
   color: var(--text-black-700);
 }
@@ -228,6 +270,7 @@ h3.my-course {
   text-align: center;
   position: relative;
 }
+
 .home .home-img img {
-  height: 400px;
+  height: 500px;
 }
