--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,10 +95,10 @@ ul {
   position: relative;
 }
 .btn {
-  font-size: 18px;
+  font-size: 15px;
   font-family: "Poppins";
   font-weight: 500;
-  padding: 12px 30px;
+  padding: 12px 20px;
   color: #e8dfec;
   border-radius: 40px;
   display: inline-block;
@@ -239,7 +239,7 @@ ul {
   flex: 0 0 60%;
   max-width: 60%;
   padding: 10px;
-  padding-top: 50px;
+  padding-top: 100px;
 }
 h3.hello {
   font-size: 40px;
@@ -259,7 +259,7 @@ h3.my-course {
   color: #c31a6e;
 }
 .home-info p {
-  margin-bottom: 40px;
+  margin-bottom: 35px;
   font-size: 20px;
   color: var(--text-black-700);
 }
@@ -273,4 +273,24 @@ h3.my-course {
 
 .home .home-img img {
   height: 500px;
+}
+
+.social-media {
+  margin-top: 1rem; /* Adjust spacing from the footer content */
+  padding-top: 80px;
+}
+
+.social-media a {
+  color: rgb(149, 149, 149); /* Icon color */
+  font-size: 1.5rem; /* Icon size */
+  margin: 0 0.5rem; /* Adjust horizontal spacing between icons */
+  transition: color 0.3s ease; /* Smooth transition for color change */
+}
+
+.social-media a:hover {
+  color: #f89ed1; /* Color on hover */
+}
+
+.social-media a:hover i {
+  transform: scale(1.2); /* Scale up the icon on hover */
 }
