--- a/pages/Other works/assets/css/style.css
+++ b/pages/Other works/assets/css/style.css
@@ -57,7 +57,7 @@ ul {
 }
 .section-title {
   font-size: 2rem;
-  background-image: url(../img/angel\ cake.gif);
+  background: #c31a6f1e;
   margin-bottom: 40px;
 }
 
